Final draft, now with fixed Z-index values

--- a/styles/style.css
+++ b/styles/style.css
@@ -212,6 +212,7 @@
   padding-bottom: 90px;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -222,22 +223,23 @@
   right: -210px;
   background: url(../images/kaufman-triangle.svg) no-repeat;
   background-size: contain;
+  z-index: -1;
+  /*Thank you for explaining about giving the whole section a positive z-index in order to create context.
+    I had tried before to give the triangle a negative value many times, but since i hadnt given it context
+    properly, it kept dissapearing behind the background!*/
 }
 
-.table_theme_dark {
-  z-index: 2;
-  color: white;
-  }
-
 .section__title_theme_dark {
-  z-index: 2;
   color: white;
 }
 
 .section__subtitle_theme_dark {
-  z-index: 2;
   color: white;
 }
+
+.table_theme_dark {
+  color: white;
+  }
 
 .table__cell_theme_dark {
   margin-top: 80px;
